--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,14 +32,30 @@ jobs:
         run: |
           docker build -t ${{ vars.DOCKER_IMAGE }} .
 
-      - name: Deploy to EC2
+      - name: Save Docker Image
+        run: |
+          docker save -o ${{ vars.DOCKER_IMAGE }}.tar ${{ vars.DOCKER_IMAGE }}
+
+      - name: Save Private Key
         env:
           SSH_PRIVATE_KEY: ${{ secrets.AWS_SSH_KEY }}
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key.pem
-          chmod 600 private_key.pem
+          chmod 400 private_key.pem
+
+      - name: Upload Docker Image
+        run: |
+          pwd
+          ls
+          scp -i private_key.pem ${{ vars.DOCKER_IMAGE }}.tar ${{ vars.AWS_EC2_USER }}@${{ secrets.AWS_EC2_IP }}
+
+      - name: Deploy to EC2
+        run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ vars.AWS_EC2_USER }}@${{ secrets.AWS_EC2_IP }} << 'EOF'
-            docker stop ${{ vars.DOCKER_NAME }} || true
-            docker rm ${{ vars.DOCKER_NAME }} || true
-            docker run -d --name ${{ vars.DOCKER_NAME }} -p 8080:8080 ${{ vars.DOCKER_IMAGE }}
+            docker load -i ${{ vars.DOCKER_IMAGE }}.tar
+            if [ $(docker ps -aq -f name=${{ vars.DOCKER_IMAGE }}) ]; then
+                docker stop ${{ vars.DOCKER_IMAGE }}
+                docker rm ${{ vars.DOCKER_IMAGE }}
+            fi
+            docker run -d --name ${{ vars.DOCKER_IMAGE }} -p 8080:8080 ${{ vars.DOCKER_IMAGE }}
           EOF
