--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,17 +42,16 @@ jobs:
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key.pem
           chmod 400 private_key.pem
-          cat private_key.pem
 
       - name: Upload Docker Image
         run: |
           pwd
           ls
-          scp -i private_key.pem ${{ vars.DOCKER_IMAGE }}.tar ${{ vars.AWS_EC2_USER }}@${{ secrets.AWS_EC2_IP }}
+          scp -i <(echo "${{ secrets.AWS_SSH_KEY }}") ${{ vars.DOCKER_IMAGE }}.tar ${{ vars.AWS_EC2_USER }}@${{ secrets.AWS_EC2_IP }}
 
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ vars.AWS_EC2_USER }}@${{ secrets.AWS_EC2_IP }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i <(echo "${{ secrets.AWS_SSH_KEY }}") ${{ vars.AWS_EC2_USER }}@${{ secrets.AWS_EC2_IP }} << 'EOF'
             docker load -i ${{ vars.DOCKER_IMAGE }}.tar
             if [ $(docker ps -aq -f name=${{ vars.DOCKER_IMAGE }}) ]; then
                 docker stop ${{ vars.DOCKER_IMAGE }}
